# cooperative_transportation_4ws_backstepping

./: CMakeLists.txt  package.xml
config/: controller.yaml
include/: dynamics_integrator.hpp  initial.hpp  kinematics_solver.hpp
include/cooperative_transportation_4ws_backstepping/: Bezier.h  DynamicsCalc.hpp  callback.hpp  callback_ct.hpp  differential_equations.hpp  dynamics_integrator.hpp  getInputValue.hpp  initial.hpp  kinematics_solver.hpp  mathFunc.h
launch/: gazebo_rviz.launch  gazebo_rviz_flat.launch
src/: Bezier.cpp  DynamicsCalc.cpp  callback.cpp  callback_ct.cpp  cooperative_transportation_dynamics.cpp  csvLogger.cpp  differential_equations.cpp  dynamics_integrator.cpp  dynamics_integrator_matrix.cpp  getInputValue.cpp  initial.cpp  kinematics_solver.cpp  mathFunc.cpp  vehicle.cpp  vehicle_ct.cpp
src/mathematica/: Axi_10_12.cpp  Axi_10_13.cpp  Axi_10_14.cpp  Axi_11_12.cpp  Axi_11_13.cpp  Axi_11_14.cpp  Axi_12_12.cpp  Axi_12_13.cpp  Axi_12_14.cpp  Axi_13_3.cpp  Axi_13_6.cpp  Axi_13_7.cpp  Axi_14_3.cpp  Axi_14_6.cpp  Axi_14_7.cpp  Axi_15_10.cpp  Axi_15_11.cpp  Axi_15_3.cpp  Axi_16_10.cpp  Axi_16_11.cpp  Axi_16_3.cpp  Axi_17_14.cpp  Axi_17_15.cpp  Axi_17_3.cpp  Axi_18_14.cpp  Axi_18_15.cpp  Axi_18_3.cpp  Axi_1_4.cpp  Axi_1_5.cpp  Axi_1_6.cpp  Axi_2_4.cpp  Axi_2_5.cpp  Axi_2_6.cpp  Axi_3_4.cpp  Axi_3_5.cpp  Axi_3_6.cpp  Axi_4_4.cpp  Axi_4_5.cpp  Axi_4_6.cpp  Axi_5_10.cpp  (+1035 more)
urdf/: cooperative_transportation_4ws_flat.xacro
